# vibeserial

./: .gitignore  Cargo.toml  README.md  start.sh
.github/workflows/: build-windows.yml
apps/desktop/: Cargo.toml
apps/desktop/contracts/: tauri-commands.md
apps/desktop/src/: main.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/ui/src/: App.vue  main.ts
apps/ui/src/components/: HexByteEditor.vue
crates/gateway-client/: Cargo.toml
crates/gateway-client/src/: lib.rs
crates/project-store/: Cargo.toml
crates/project-store/src/: lib.rs
crates/protocol-core/: Cargo.toml
crates/protocol-core/src/: lib.rs
crates/serial-core/: Cargo.toml
crates/serial-core/src/: lib.rs
crates/task-engine/: Cargo.toml
crates/task-engine/src/: lib.rs
docs/: release.md
