[workspace]
members = [
  "apps/desktop",
  "crates/serial-core",
  "crates/protocol-core",
  "crates/task-engine",
  "crates/project-store",
  "crates/gateway-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["vibeserial contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
